# kinorium-api

./: .gitignore  README.md  generate_async_version.py  get_session.py  pyproject.toml
kinorium/: __init__.py  base.py  cli.py  client.py  client_async.py  exceptions.py
kinorium/models/: __init__.py  movie.py  user.py
kinorium/utils/: __init__.py  request.py  request_async.py
tests/: test_async.py  test_models.py  test_normalization.py  test_signing.py
